--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.6.0",
-    "mongoose": "^7.2.3"
+    "mongoose": "^7.2.3",
+    "neo4j-driver": "^5.10.0"
   }
 }
